--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -32,6 +32,9 @@ rules:
   no-mixed-spaces-and-tabs:                # disallow tabs + spaces for indentation except for smart-tabs
     - error
     - smart-tabs
+  no-unused-vars:                          # disallow unused variables/imports
+    - error
+    - varsIgnorePattern: "Style|Props"
   no-multiple-empty-lines:                 # disallow more than one empty line
     - error
     - max: 1
@@ -97,11 +100,12 @@ rules:
     - blankLine: always                    # require empty line before return statement
       prev: "*"
       next: return
+  
   # React-Native
   react-native/no-inline-styles: warn      # disallow inline styles
   # React
-  react/jsx-uses-vars: error               # fix no-unused-vars for JSX expressions
-  react/jsx-uses-react: error              # fix no-unused vars for React
+  react/jsx-uses-vars: warn                # fix no-unused-vars for JSX expressions
+  react/jsx-uses-react: warn               # fix no-unused vars for React
   react/jsx-tag-spacing: error             # require consistent spaces before JSX tags
   react/jsx-no-duplicate-props: error      # disallow duplicate props
   react/jsx-equals-spacing:                # require spaces around equal signs for JSX
