--- a/package.json
+++ b/package.json
@@ -14,11 +14,23 @@
 			"module:react-native-dotenv"
 		],
 		"plugins": [
-			["module-resolver", {
-				"root": ["./src"],
-				"alias": { "@": "./src" },
-				"extensions": [".ios.js", ".android.js", ".js", ".json"]
-			}]
+			[
+				"module-resolver",
+				{
+					"root": [
+						"./src"
+					],
+					"alias": {
+						"@": "./src"
+					},
+					"extensions": [
+						".ios.js",
+						".android.js",
+						".js",
+						".json"
+					]
+				}
+			]
 		]
 	},
 	"scripts": {
@@ -45,13 +57,11 @@
 		"react-native-camera": "^3.15.1",
 		"react-native-color-picker": "^0.5.2",
 		"react-native-dotenv": "^0.2.0",
-		"react-native-elements": "^1.2.7",
 		"react-native-fast-image": "^8.1.5",
 		"react-native-flags": "^1.0.0",
 		"react-native-image-crop-picker": "^0.26.2",
 		"react-native-keyboard-aware-scroll-view": "^0.9.1",
 		"react-native-permissions": "^2.0.9",
-		"react-native-progress": "^4.0.3",
 		"react-native-qrcode-scanner": "^1.3.1",
 		"react-native-qrcode-svg": "^6.0.1",
 		"react-native-router-flux": "^4.0.6",
