--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		],
 		"plugins": [
 			[
+				"module:react-native-dotenv"
+			],
+			[
 				"module-resolver",
 				{
 					"root": [
@@ -51,6 +54,7 @@
 		"react-native": "0.63.4",
 		"react-native-camera": "^3.40.5",
 		"react-native-color-picker": "^0.6.0",
+		"react-native-dotenv": "^2.5.0",
 		"react-native-fast-image": "^8.3.4",
 		"react-native-flags": "^1.0.0",
 		"react-native-gesture-handler": "^1.9.0",
