--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		]
 	},
 	"scripts": {
+		"start": "react-native start",
 		"reinstall": "rm -rf node_modules; npm cache clean; npm install",
 		"reset": "watchman watch-del-all; npm run reinstall; npm start -- --reset-cache",
 		"ios": "react-native run-ios",
@@ -44,6 +45,10 @@
 		"android-release": "react-native run-android --variant=release"
 	},
 	"dependencies": {
+		"@react-native-community/masked-view": "^0.1.10",
+		"@react-native-community/toolbar-android": "0.1.0-rc.2",
+		"@react-navigation/native": "^5.8.10",
+		"@react-navigation/stack": "^5.12.8",
 		"firebase": "^6.4.2",
 		"qrcode": "^1.4.4",
 		"react": "^16.13.1",
@@ -53,12 +58,16 @@
 		"react-native-dotenv": "^0.2.0",
 		"react-native-fast-image": "^8.1.5",
 		"react-native-flags": "^1.0.0",
+		"react-native-gesture-handler": "^1.9.0",
 		"react-native-image-crop-picker": "^0.26.2",
 		"react-native-keyboard-aware-scroll-view": "^0.9.1",
 		"react-native-permissions": "^2.0.9",
 		"react-native-qrcode-scanner": "^1.3.1",
 		"react-native-qrcode-svg": "^6.0.1",
+		"react-native-reanimated": "^1.13.2",
 		"react-native-router-flux": "^4.0.6",
+		"react-native-safe-area-context": "^3.1.9",
+		"react-native-screens": "^2.16.1",
 		"react-native-svg": "^10.0.0",
 		"react-native-svg-flagkit": "^0.9.5",
 		"react-native-vector-icons": "^6.6.0",
