--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
 		"firebase": "^8.2.1",
 		"lodash": "^4.17.21",
 		"qrcode": "^1.4.4",
-		"react": "^17.0.1",
-		"react-native": "0.63.4",
+		"react": "17.0.1",
+		"react-native": "0.64.0",
 		"react-native-camera": "^3.40.5",
 		"react-native-color-picker": "^0.6.0",
 		"react-native-dotenv": "^2.5.0",
@@ -82,7 +82,7 @@
 	"devDependencies": {
 		"@babel/core": "7.12.10",
 		"@babel/runtime": "7.12.5",
-		"@react-native-community/eslint-config": "2.0.0",
+		"@react-native-community/eslint-config": "^2.0.0",
 		"babel-jest": "26.6.3",
 		"babel-plugin-module-resolver": "^4.1.0",
 		"eslint": "^7.17.0",
