--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 	"dependencies": {
 		"@react-native-community/masked-view": "^0.1.10",
 		"@react-native-community/toolbar-android": "0.1.0-rc.2",
-		"@react-navigation/bottom-tabs": "^5.11.2",
+		"@react-navigation/material-top-tabs": "^5.3.14",
 		"@react-navigation/native": "^5.8.10",
 		"@react-navigation/stack": "^5.12.8",
 		"firebase": "^8.2.1",
@@ -73,6 +73,7 @@
 		"react-native-screens": "^2.16.1",
 		"react-native-svg": "^12.1.0",
 		"react-native-svg-flagkit": "^0.9.5",
+		"react-native-tab-view": "^2.16.0",
 		"react-native-vector-icons": "^7.1.0",
 		"react-redux": "^7.2.2",
 		"redux": "^4.0.5",
